--- a/src/Properties/Resources.resx
+++ b/src/Properties/Resources.resx
@@ -130,10 +130,13 @@
   <data name="WindowsHelp (Custom)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WindowsHelp (Custom)2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CPUs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CPUs.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="WindowsWarning" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WindowsWarning (Custom).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CPUs" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\CPUs.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="WindowsLoading" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\WindowsLoading.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
